# microservices-example

./: Makefile  README.md  pyproject.toml
microservices_example/: script.py  types_pb2.py  types_pb2.pyi
microservices_example/users/: service.py  users_pb2.py  users_pb2_grpc.py
protos/: types.proto  users.proto
